modified swagger and the generated codes
