# restapi/doc.go
@@ -1,15 +1,16 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
 /*
-Package restapi A calculator API
-An awesome calculator API
+Package restapi CalcuCo's calculator
+This is CalcuCo's awesome calculator. <br> <br>Operation supported: <br> <ol><li>Add - `add` </li> <li>Subtract - `sub`</li><li>Multiply - `multi`</li><li>Divide - `div`</li><li>Square root - `sqrt`</li><li>Qubic root - `cbrt`</li><li>Power - `pow`</li><li>Factorial - `fac`</li><ol>
 
 
     Schemes:
       http
     Host: localhost
-    BasePath: /
+    BasePath: /v1
     Version: 1.0.0
+    License: Apache 2.0 http://www.apache.org/licenses/LICENSE-2.0.html
 
     Consumes:
     - application/json
