# restapi/operations/events/find_events_responses.go
@@ -1,119 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package events
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "github.com/calcuco/calculator/models"
-)
-
-// FindEventsOKCode is the HTTP code returned for type FindEventsOK
-const FindEventsOKCode int = 200
-
-/*FindEventsOK list all events
-
-swagger:response findEventsOK
-*/
-type FindEventsOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload []*models.Event `json:"body,omitempty"`
-}
-
-// NewFindEventsOK creates FindEventsOK with default headers values
-func NewFindEventsOK() *FindEventsOK {
-
-	return &FindEventsOK{}
-}
-
-// WithPayload adds the payload to the find events o k response
-func (o *FindEventsOK) WithPayload(payload []*models.Event) *FindEventsOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the find events o k response
-func (o *FindEventsOK) SetPayload(payload []*models.Event) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *FindEventsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if payload == nil {
-		// return empty array
-		payload = make([]*models.Event, 0, 50)
-	}
-
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-}
-
-/*FindEventsDefault generic error
-
-swagger:response findEventsDefault
-*/
-type FindEventsDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewFindEventsDefault creates FindEventsDefault with default headers values
-func NewFindEventsDefault(code int) *FindEventsDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &FindEventsDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the find events default response
-func (o *FindEventsDefault) WithStatusCode(code int) *FindEventsDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the find events default response
-func (o *FindEventsDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the find events default response
-func (o *FindEventsDefault) WithPayload(payload *models.Error) *FindEventsDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the find events default response
-func (o *FindEventsDefault) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *FindEventsDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
